# Nucleo_F439ZI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Nucleo_F439ZI/: .mxproject  CMakeLists.txt  Nucleo_F439ZI.ioc  STM32F439XX_FLASH.ld  STM32F439XX_RAM.ld  startup_stm32f439xx.s
Nucleo_F439ZI/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Nucleo_F439ZI/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Nucleo_F439ZI/cmake/: starm-clang.cmake
Nucleo_F439ZI/cmake/stm32cubemx/: CMakeLists.txt
cmake/: gcc-arm-none-eabi.cmake
src/app/: CMakeLists.txt
src/app/inc/: app.h
src/app/src/: app.c  test.cpp
src/app_erpc_c/: CMakeLists.txt
src/app_erpc_c/inc/: erpc_config.h  server.h  transport_lwip_tcp.h
src/app_erpc_c/src/: memory.cpp  server.c  transport_lwip_tcp.cpp
src/can/: CMakeLists.txt
src/can/inc/: can.hpp
src/can/src/: can.cpp
src/det/: CMakeLists.txt
src/det/inc/: det_config.h
src/ethernetif/: CMakeLists.txt
src/ethernetif/src/: ethernetif.c
src/freertos_cfg/: CMakeLists.txt
src/freertos_cfg/inc/: FreeRTOSConfig.h
src/freertos_cfg/src/: freertos_porting.c
src/lan8742_stm/: CMakeLists.txt
src/lwip/: CMakeLists.txt
src/lwip/inc/: lwip.h  lwipopts.h
src/lwip/inc/arch/: cc.h  sys_arch.h
src/lwip/src/: lwip.c  sys_arch.c
src/std_libs/: std_types.h  std_utils.h
tools/debugging/: Debug.jdebug
tools/elf_reader/: elf_reader.py
tools/flashing/: flash.jflash
